tests/baselines/reference/assignFromBooleanInterface.errors.txt
tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface.ts(3,1): error TS2322: Type 'Boolean' is not assignable to type '真假'.
  '真假' is a primitive, but 'Boolean' is a wrapper object. Prefer using '真假' when possible.


==== tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface.ts (1 errors) ====
    var x = true;
    var a: Boolean;
    x = a;
    ~
!!! error TS2322: Type 'Boolean' is not assignable to type '真假'.
!!! error TS2322:   '真假' is a primitive, but 'Boolean' is a wrapper object. Prefer using '真假' when possible.
    a = x;